[package]
name = "sdhttpp"
version = "0.1.0"
edition = "2024"

[dependencies]
# Essential
clap = { version = "4.5.40", features = ["derive"] }
rand = "0.9.1"
chrono = "0.4.41"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.23"

# TLS
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
rustls-pemfile = "2"

# TOR
arti-client = { version = "0.40.0", features = ["tokio", "rustls", "onion-service-service", "onion-service-client", "experimental-api"] }
tor-hsservice = "0.40.0"
tor-cell = "0.40.0"
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
tokio-util = { version = "0.7.18", features = ["io-util"] }
futures = "0.3.32"
safelog = "0.8.0"
