[package]
name = "sdhttpp"
version = "0.1.0"
edition = "2024"

[features]
tor = [
    "dep:arti-client",
    "dep:tor-hsservice",
    "dep:tor-cell",
    "dep:tokio",
    "dep:tokio-util",
    "dep:futures",
    "dep:safelog",
]

[dependencies]
# Essential
clap = { version = "4.5.40", features = ["derive"] }
rand = "0.9.1"
chrono = "0.4.41"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.23"

# Hashing
sha2 = "0.10"

# TLS
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
rustls-pemfile = "2"

# TOR (optional, enabled via --features tor)
arti-client = { version = "0.40.0", features = ["tokio", "rustls", "onion-service-service", "onion-service-client", "experimental-api"], optional = true }
tor-hsservice = { version = "0.40.0", optional = true }
tor-cell = { version = "0.40.0", optional = true }
tokio = { version = "1.50.0", features = ["rt-multi-thread"], optional = true }
tokio-util = { version = "0.7.18", features = ["io-util"], optional = true }
futures = { version = "0.3.32", optional = true }
safelog = { version = "0.8.0", optional = true }
